--- a/_posts/2023-07-03-the-java-8.md
+++ b/_posts/2023-07-03-the-java-8.md
@@ -18,7 +18,7 @@ tag: [inflearn, java]
 
 1. ##### [함수형 인터페이스와 람다](/the-java-8-section-1)
 
-2. ##### 인터페이스의 변화
+2. ##### [인터페이스의 변화](/the-java-8-section-2)
 
 3. ##### Stream
 
