--- a/_posts/2023-07-03-the-java-8.md
+++ b/_posts/2023-07-03-the-java-8.md
@@ -20,7 +20,7 @@ tag: [inflearn, java]
 
 2. ##### [인터페이스의 변화](/the-java-8-section-2)
 
-3. ##### Stream
+3. ##### [Stream](/the-java-8-section-3)
 
 4. ##### Optional
 
