--- a/_posts/2023-07-03-the-java-8.md
+++ b/_posts/2023-07-03-the-java-8.md
@@ -22,7 +22,7 @@ tag: [inflearn, java]
 
 3. ##### [Stream](/the-java-8-section-3)
 
-4. ##### Optional
+4. ##### [Optional](/the-java-8-section-4)
 
 5. ##### Date와 Time
 
