--- a/_posts/2023-07-03-the-java-8.md
+++ b/_posts/2023-07-03-the-java-8.md
@@ -24,6 +24,6 @@ tag: [inflearn, java]
 
 4. ##### [Optional](/the-java-8-section-4)
 
-5. ##### Date와 Time
+5. ##### [Date와 Time](/the-java-8-section-5)
 
 6. ##### CompletableFuture
