fix: category 추가로 인한 이미지 경로 변경

--- a/_posts/2023-11-18-swagger.md
+++ b/_posts/2023-11-18-swagger.md
@@ -324,7 +324,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - description(String description) : 명세서 설명
 - version(String version) : 명세서 버전
 
-![apiInfo](../images/swagger/apiInfo.png)
+![apiInfo](../../images/swagger/apiInfo.png)
 
 &nbsp;&nbsp; 이외에 각 메서드에 매개변수로 어떤 값이 들어가는지 등의 정보는 해당 클래스 혹은 메서드 문서를 보거나, 상기 코드를 보면 쉽게 유추 가능하다.
 
@@ -340,7 +340,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - description : 해당 API의 상세 설명
 - responses : 여러 응답에 대한 정보. `@ApiResponse` 어노테이션이 사용됨. 여러 개인 경우 배열로 넣어줌
 
-![@Operation](../images/swagger/@Operation.png)
+![@Operation](../../images/swagger/@Operation.png)
 
 <br>
 
@@ -352,7 +352,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - description : 해당 응답의 설명
 - content : 해당 응답의 내용. `@Content` 어노테이션을 사용
 
-![@ApiResponse](../images/swagger/@ApiResponse.png)
+![@ApiResponse](../../images/swagger/@ApiResponse.png)
 
 <br>
 
@@ -364,7 +364,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - examples : 예시 표현들. `@ExampleObject` 어노테이션을 사용. 여러 개인 경우 배열로 넣어줌
 - schema : 스키마 표현. `@Schema` 어노테이션을 사용
 
-![@Content](../images/swagger/@Content.png)
+![@Content](../../images/swagger/@Content.png)
 
 <br>
 
@@ -375,7 +375,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - name : 해당 예시의 이름
 - value : 예시 값
 
-![@ExampleObject](../images/swagger/@ExampleObject.png)
+![@ExampleObject](../../images/swagger/@ExampleObject.png)
 
 <br>
 
@@ -388,7 +388,7 @@ Docket 객체를 여러 개 등록할 경우 반드시 `groupName`을 지정해 
 - required : 필수 여부
 - example : 예시
 
-![@Schema](../images/swagger/@Schema.png)
+![@Schema](../../images/swagger/@Schema.png)
 
 <br>
 
