--- a/_posts/java/2023-07-03-the-java-8.md
+++ b/_posts/java/2023-07-03-the-java-8.md
@@ -1,8 +1,8 @@
 ---
 layout: single
 title: "자바 8(소개 및 주요 기능)"
-tag: java
-categories: chocolaggibbiddori
+tag: category
+categories: 목차
 ---
 
 <br>
