update: 자바의 정석 1장 정리 파트 2

--- a/_posts/2024-02-24-more-more.md
+++ b/_posts/2024-02-24-more-more.md
@@ -9,13 +9,24 @@ categories: diary
 
 ## 사용 정리
 ### REST API
-- [ ] https://junheilee.github.io/cs/http-restapi
+- [ ] [사용](https://junheilee.github.io/cs/http-restapi)
 
 
 ## 개념 정리
-### 1. 운영체제(OS)에 독립적
-- [ ] JVM
-### 2. 객체지향언어(OOP)
-- [ ] wrapper class
-### 4. Garbage Collection(자동 메모리 관리)
-- [ ] garbage collector
+### Java 특징 관련
+- [ ] [JVM](/language/standard-of-java-01_1/#1-%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9Cos%EC%97%90-%EB%8F%85%EB%A6%BD%EC%A0%81) <br>
+  자바 성능 튜닝이야기 공부 하고 작성
+- [ ] [객체지향언어(OOP)](/language/standard-of-java-01_1/#2-%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EC%96%B8%EC%96%B4oop)
+- [ ] [wrapper class](/language/standard-of-java-01_1/#2-%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EC%96%B8%EC%96%B4oop)
+- [ ] [garbage collector](/language/standard-of-java-01_1/#4-garbage-collection%EC%9E%90%EB%8F%99-%EB%A9%94%EB%AA%A8%EB%A6%AC-%EA%B4%80%EB%A6%AC)
+- [ ] [java.rim 패키지](/language/standard-of-java-01_1/#5-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EC%99%80-%EB%B6%84%EC%82%B0-%EC%B2%98%EB%A6%AC)
+- [ ] [java 멀티 쓰레드](/language/standard-of-java-01_1/#5-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EC%99%80-%EB%B6%84%EC%82%B0-%EC%B2%98%EB%A6%AC)
+
+### JDK 관련
+- [ ] [java 모듈화](/language/standard-of-java-01_2/#jre)
+- [ ] [JVM](/language/standard-of-java-01_2/#jvm)
+- [ ] [어셈블리어? 기계어? 중간언어?](/language/standard-of-java-01_2/#java-api)
+- [ ] [java API-Java의 정석 정리에 있음](/language/standard-of-java-01_2/#java-api)
+
+
+ 
