new: Linux 시작하기

--- a/_posts/2024-02-24-more-more.md
+++ b/_posts/2024-02-24-more-more.md
@@ -29,4 +29,8 @@ categories: diary
 - [ ] [java API-Java의 정석 정리에 있음](/language/standard-of-java-01_2/#java-api)
 
 
+### OS
+- [ ] [OS?](/os/linux-01/#os)
+
+
  
