--- a/_posts/os/2024-03-27-linux-01.md
+++ b/_posts/os/2024-03-27-linux-01.md
@@ -16,7 +16,7 @@ tag: [OS, Linux]
 
 ### OS를 알아야 하는 이유
 &nbsp; OS는 시스템 소프트웨어로, 컴퓨터 시스템을 효율적으로 운영하기 위한 프로그램입니다.
-자원을 효율적으로 관리하고, 컴퓨터 시스템을 편리하게 사용할 수 있는 환경을 제공하죠. 실제로 응용 프로그램을 개발하는 것은 OS와 통신하는 프로그램을 개발한다는 것입니다.
+자원을 효율적으로 관리하고, 컴퓨터 시스템을 편리하게 사용할 수 있는 환경을 제공하죠. 실제로 응용 프로그램 개발은 OS와 통신하는 프로그램을 개발한다는 의미입니다.
 <span style="background-color: #E2E2E2">개발한 제품을 **운영**하고 **배포**하기 위해서는 OS에 대한 이해가 필수입니다.</span><br>
 
 <span class="page__taxonomy-item p-category">하드웨어</span><span class="sep">&nbsp;↔&nbsp;</span>
