desigh: 게시글 main 가로 폭 x-large 반응형 제거

--- a/_posts/os/2024-03-27-linux-01.md
+++ b/_posts/os/2024-03-27-linux-01.md
@@ -90,8 +90,7 @@ tag: [OS, Linux]
   <span itemprop="keywords">
     <a href="https://www.yalco.kr/35_linux/" class="page__taxonomy-item p-category">얄코, '가장 쉽게 배우는 리눅스'</a><span class="sep">&nbsp; </span>
     <a href="https://product.kyobobook.co.kr/detail/S000001834763" class="page__taxonomy-item p-category">길벗, '모두의 리눅스'</a><span class="sep">&nbsp; </span>
-    <a href="http://www.kocw.net/home/search/kemView.do?kemId=1046323" class="page__taxonomy-item p-category">반효경, 'KOCW 운영체제와 정보기술의 원리'</a><span class="sep">&nbsp; </span>
-    <a href="https://aws.amazon.com/ko/what-is/restful-api/" class="page__taxonomy-item p-category">aws, 'RESTful API란 무엇인가요?'</a>
+    <a href="http://www.kocw.net/home/search/kemView.do?kemId=1046323" class="page__taxonomy-item p-category">반효경, 'KOCW 운영체제와 정보기술의 원리'</a>
 
   </span>
 </p>
