--- a/_posts/os/2024-03-27-linux-01.md
+++ b/_posts/os/2024-03-27-linux-01.md
@@ -36,12 +36,13 @@ tag: [OS, Linux]
 
 ### Linux에 익숙해지고 싶은 이유
 
-<div style="border: 1px solid none; float: left; width: 200px; padding: 10px ">
+
+<div style="border: 1px solid none; float: left; width: 20%; min-width: 200px; max-width: 250px; padding: 10px ">
 <img src="../../images/2024-03-27-linux-01/linux_logo.png">
 </div>
 
-<div style="border: 1px solid none; float: left; width: 60%; min-width: 470px">
-
+<div style="border: 1px solid none; float: left; width: 60%;">
+<div style="width: 100%; min-width: 397px;">
 &nbsp; Windows, MacOS, Unix 등 다양한 종류의 OS가 존재합니다.<br>
 그중 Linux는 Unix에서 파생된 오픈소스 소프트웨어로 무료입니다.
 <span style="background-color: #E2E2E2">오픈소스, 무료</span> 이 두 가지 이유만으로 Linux는 개발 시장에서 아주 크게 자리하게 됩니다.<br>
@@ -52,7 +53,7 @@ tag: [OS, Linux]
 <br>
 &nbsp; 따라서 현재 대부분의 웹 서버, 애플리케이션 서버, DB 서버 등의 운영체제로 리눅스가 사용되고 있습니다.
 <span style="background-color: #E2E2E2">다양한 환경에서 개발 및 관리하기 위해</span>서 Linux와 친해져야 한다고 생각했습니다.
-
+</div>
 </div>
 
 <div style="clear: both;"></div>
@@ -66,7 +67,7 @@ tag: [OS, Linux]
 보통 Linux라고 하면 Linux 배포판을 뜻한다고 합니다.<br>
 
 
-<div style="border: 1px solid none; float: left; width: 80%; min-width: 470px">
+<div style="border: 1px solid none; float: left; width: 80%; min-width: 397px">
 
 &nbsp;Google에 "linux distro timeline"을 검색해 보시면 얼마나 많은 파생이 발생했는지 알 수 있습니다.
 흔히 접하는 안드로이드도 모바일용 Linux 배포판이며, 저는 전에 사용 경험이 있는 데비안 계열의 Ubuntu를 설치할 예정입니다.<br>
