update: Linux 시작하기

--- a/_posts/2024-02-24-more-more.md
+++ b/_posts/2024-02-24-more-more.md
@@ -30,7 +30,8 @@ categories: diary
 
 
 ### OS
-- [ ] [OS?](/os/linux-01/#os)
+- [ ] [OS?](/os/linux-01/#OS를-알아야-하는-이유)
+- [ ] [도커](/os/linux-01/#기타)
 
 
  
