--- a/_posts/os/2024-03-27-linux-01.md
+++ b/_posts/os/2024-03-27-linux-01.md
@@ -13,6 +13,7 @@ tag: [OS, Linux]
 ## Linux란?
 
 &nbsp; OS의 한 종류입니다. 다른 OS가 아닌 Linux를 공부하려는 이유를 알기 위해서는 OS 즉, 운영체제가 무엇인지 알 필요가 있습니다.
+<br><br>
 
 ### OS를 알아야 하는 이유
 &nbsp; OS는 시스템 소프트웨어로, 컴퓨터 시스템을 효율적으로 운영하기 위한 프로그램입니다.
@@ -82,8 +83,45 @@ tag: [OS, Linux]
 
 ## 개발 환경 구축
 
+&nbsp; Windows 노트북에서 리눅스를 사용하려면 다양한 방법을 활용할 수 있습니다.
+<br>
+
+### 환경을 2개로 분리하기
+
+- VM 소프트웨어(하이퍼바이저 Type 2)
+  - 기존의 환경(Host) 위에 하이퍼바이저가 설치되고, 하이퍼바이저는 새로 구축되는 환경(Guest)을 분리하고 관리
+  - 가상의 환경을 구축한 후, CD/DVD 커넥션을 다운로드한 Ubuntu 이미지(.iso) 파일로 지정
+- 파티션 분리
+  - 디스크 파티션 분할
+  - Rufus를 사용해 Ubuntu 설치용 USB 생성
+  - 메인보드 BIOS의 Boot Priority 설정
+- 실제로 디스크 두 개 사용하기
+
+<br>
+
+### 기타
+- Docker
+  - 리눅스 컨테이너 기반 가상화 플랫폼
+  - Docker에서 Ubuntu 이미지 다운로드 후 실행
+- WSL(Windows Subsystem for Linux), Window 10 이후
+  - Window에서 Linux를 CLI로 사용할 수 있는 윈도우 하위 시스템
+  - [🔗따라 하기](https://www.yalco.kr/_01_install_wsl/)
+- 온라인 IDE/터미널
+  - 클라우드 서비스에서 가상 환경 사용
+  - 구름 IDE, AWS Cloud 9, Google Cloud Compute Engine
+
+<br>
+
+### 저는!
+
+&nbsp; 저는 첫 번째로 제시된 방법으로 VMmare 설치해서 했다가 WSL로도 설치해 봤습니다. 
+일단은 가볍게 Linux와 친해지는 시간을 가져보도록 하겠습니다.
+
 # 마무리
-원래는 OS를 먼저 학습한 후, Linux를 하려했지만, git commit 정리를 하다가 vim 단축키를 빨리 습득해야겠다고 단정지엇슴매
+
+&nbsp; 원래는 OS를 먼저 학습하고 Linux를 하려 했지만, git commit 정리하다가 vim 단축키에 꽂히고, 냅다 Ubuntu까지 깔았습니다.
+항상 궁금증이 생겨서 생각한 것보다 정리가 오래 걸리지만 퍼즐이 완성되는 게 저는 조아요..
+가상화 관련해서 쉽게 설명된 블로그를 찾았는데, 집에 있는 책 저자이셔서 깜짝 놀랐습니당!
 
 ---
 <p> 
@@ -91,7 +129,9 @@ tag: [OS, Linux]
   <span itemprop="keywords">
     <a href="https://www.yalco.kr/35_linux/" class="page__taxonomy-item p-category">얄코, '가장 쉽게 배우는 리눅스'</a><span class="sep">&nbsp; </span>
     <a href="https://product.kyobobook.co.kr/detail/S000001834763" class="page__taxonomy-item p-category">길벗, '모두의 리눅스'</a><span class="sep">&nbsp; </span>
-    <a href="http://www.kocw.net/home/search/kemView.do?kemId=1046323" class="page__taxonomy-item p-category">반효경, 'KOCW 운영체제와 정보기술의 원리'</a>
+    <a href="http://www.kocw.net/home/search/kemView.do?kemId=1046323" class="page__taxonomy-item p-category">반효경, 'KOCW 운영체제와 정보기술의 원리'</a><span class="sep">&nbsp; </span>
+    <a href="https://blog.naver.com/alice_k106/220218878967" class="page__taxonomy-item p-category">용찬호, '전가상화와 반가상화'</a>
+
 
   </span>
 </p>
