style: tag 및category 변경

--- a/_posts/2023-11-18-swagger.md
+++ b/_posts/2023-11-18-swagger.md
@@ -1,10 +1,12 @@
 ---
 layout: single
 title: "Swagger 3.0.0 사용법"
-tag: swagger
-categories: chocolaggibbiddori
+tag: etc
+categories: etc
 ---
+post by [chocolaggibbiddori](https://chocolaggibbiddori.github.io)
 
+<br>
 # Swagger 3.0.0을 이용한 API 명세 자동화
 
 &nbsp;&nbsp; 최신 버전의 Swagger 라이브러리를 사용하기 위해 공부를 하였고, 책에 나와있는 2.9.2 버전과 다른 부분이 있어서 이를 공유하고자 이 글을 작성함
