--- a/_posts/2024-01-11-231229.md
+++ b/_posts/2024-01-11-231229.md
@@ -1,8 +1,7 @@
 ---
 layout: single
 title: "[23.12.29] 두둥 등장"
-categories: diary
-tag: 계묘
+categories: etc
 ---
 
 # 안녕하세용
@@ -13,7 +12,8 @@ tag: 계묘
 근주자적 근묵자흑이라고 친구 따라 강남에 오니 깨나 좋다.
 맹자의 어머니도 이래서 세 번이나 이사하셨나 싶다.
 <br>
-후계자를 위해 고된 삽질의 산물을 기꺼이 넘겨주신 chocolaggibbiddori 형아에게 무한히 고마워하고 있읍니다.
+후계자를 위해 고된 삽질의 산물을 기꺼이 넘겨주신 post by [chocolaggibbiddori](https://chocolaggibbiddori.github.io)
+ 형아에게 무한히 고마워하고 있읍니다.
 <br>
 감사의 뜻으로 파파존스를 한 번 대접할까 합니다.
 
@@ -64,4 +64,4 @@ public static final String SP = "&nbsp";
 
 
 **[개발 글 맛집]**<br>
-[chocolaggibbiddori 블로그](https://chocolaggibbiddori.github.io/)
+[chocolaggibbiddori 블로그](https://post by chocolaggibbiddori.github.io/)
