--- a/_posts/java/2023-07-03-the-java-8.md
+++ b/_posts/java/2023-07-03-the-java-8.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "자바 8(소개 및 주요 기능)"
-tag: category
+tag: Java
 categories: category
 ---
 
@@ -17,14 +17,14 @@ categories: category
 
 > #### 주요 기능
 
-1. ##### [함수형 인터페이스와 람다](/chocolaggibbiddori/the-java-8-section-1)
+1. ##### [함수형 인터페이스와 람다](/etc/the-java-8-section-1)
 
-2. ##### [인터페이스의 변화](/chocolaggibbiddori/the-java-8-section-2)
+2. ##### [인터페이스의 변화](/etc/the-java-8-section-2)
 
-3. ##### [Stream](/chocolaggibbiddori/the-java-8-section-3)
+3. ##### [Stream](/etc/the-java-8-section-3)
 
-4. ##### [Optional](/chocolaggibbiddori/the-java-8-section-4)
+4. ##### [Optional](/etc/the-java-8-section-4)
 
-5. ##### [Date와 Time](/chocolaggibbiddori/the-java-8-section-5)
+5. ##### [Date와 Time](/etc/the-java-8-section-5)
 
 6. ##### CompletableFuture
