update: 자바의 정석 정리 1장 파트 3

--- a/_posts/2024-02-24-more-more.md
+++ b/_posts/2024-02-24-more-more.md
@@ -22,12 +22,22 @@ categories: etc
 - [ ] [java.rim 패키지](/language/standard-of-java-01_1/#5-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EC%99%80-%EB%B6%84%EC%82%B0-%EC%B2%98%EB%A6%AC)
 - [ ] [java 멀티 쓰레드](/language/standard-of-java-01_1/#5-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EC%99%80-%EB%B6%84%EC%82%B0-%EC%B2%98%EB%A6%AC)
 
+
+
 ### JDK 관련
 - [ ] [java 모듈화](/language/standard-of-java-01_2/#jre)
 - [ ] [JVM](/language/standard-of-java-01_2/#jvm)
 - [ ] [어셈블리어? 기계어? 중간언어?](/language/standard-of-java-01_2/#java-api)
 - [ ] [java API-Java의 정석 정리에 있음](/language/standard-of-java-01_2/#java-api)
 
+### 개발 시작 관련
+
+- [ ] [class loader](/language/standard-of-java-01_3/#-실행-과정)
+- 검증, 준비, 해석 단계, 해석 단계에서 ClassNotFoundError Link하며 나는 오류는 RuntimeError임
+
+> 🌟참고<br>
+> &nbsp; &nbsp; method cignature는 메서드 이름, 파라미터 타입 리스트를 말하며, main method의 메서드 시그니처는 main(String[]) 입니다.
+>
 
 ### OS
 - [ ] [OS?](/os/linux-01/#OS를-알아야-하는-이유)
