chore: 제목 대변경

--- a/_posts/java/2024-03-01-java-start-02.md
+++ b/_posts/java/2024-03-01-java-start-02.md
@@ -2,9 +2,9 @@
 layout: single
 title: "[Java] 대략 JDK(실행 파일 + JRE(JVM + Java API))"
 categories: Language
-tag: [Java의 정석]
+tag: [Java, start]
 ---
-Java의 정석 01장 정리(2)
+자바로 개발하기 위한 준비물
 
 # JDK
 
@@ -12,7 +12,7 @@ Java의 정석 01장 정리(2)
 진짜 띠용이었지만 그때는 그냥 시키는 대로 했습니다.<br>
 Java Development Kit, JDK는 자바로 개발하는데 필요한 도구들을 하나로 묶어 둔 것입니다.<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/jvm.png)<br>
+![@Schema](../../images/java-start/jvm.png)<br>
 [JavaSE 8](https://docs.oracle.com/javase/8/docs/)
 
 진짜 많지만 주요한 도구만 보도록 하겠습니다.
@@ -98,27 +98,27 @@ class Test {
 
 간단하게 메모장으로 작성하고 확장자를 `.java`로 저장합니다. "Test"라는 문자열을 콘솔에 출력하는 코드입니다.<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/java_source_file.png)<br>
+![@Schema](../../images/java-start/java_source_file.png)<br>
 
 먼저 cmd 창에서 [🔗컴파일러](#자바-컴파일러-javacexe)를 실행하겠습니다.<br>
 다음과 같이 Test.class 파일이 생성된 것을 확인할 수 있습니다.<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/javac_execute.png)<br>
+![@Schema](../../images/java-start/javac_execute.png)<br>
 
 Test.class를 메모장으로 켜 보면<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/java_class_file.png)<br>
+![@Schema](../../images/java-start/java_class_file.png)<br>
 
 요상한 언어가 튀어나옵니다. JVM은 이해하겠죠?<br>
 이제 이 녀석을 JVM을 통해 실제로 작동시켜 보겠습니다. [🔗인터프리터](#자바-인터프리터-javaexe)를 실행하면 되죠!
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/java_execute.png)<br>
+![@Schema](../../images/java-start/java_execute.png)<br>
 
 콘솔 창에 Test 나왔어요. 잘 실행됩니다.<br>
 
 Test.java 파일을 지웠습니다. [🔗역어셈블러](#역어셈블러-javapexe)를 사용해 볼 건데요.<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/javap_execute.png)<br>
+![@Schema](../../images/java-start/javap_execute.png)<br>
 
 잘 동작합니다.
 위는 -c 옵션을 사용하지 않아 소스 코드의 선언부를 확인할 수 있고,
@@ -145,7 +145,7 @@ JDK 9부터 모듈 시스템을 도입해 `jre` 디렉토리가 사라졌다고 
 
 &nbsp; JVM을 계층으로 나타낸 그림입니다.<br>
 
-![@Schema](../../images/2024-02-24-standard-of-java-01/ex_jvm.jpg)<br>
+![@Schema](../../images/java-start/ex_jvm.jpg)<br>
 
 &nbsp; 애플리케이션과 OS 사이에 계층이 하나 추가되기 때문에 사람이 작성한 코드를 JVM의 언어(byte code)로, JVM의 언어를 OS의 언어(native code)로 전달하는 과정이 필요합니다.
  운영체제에 독립적이라는 장점이 있으나, 언어를 변환하는 행위를 두 번 해야 하므로 속도가 느리다는 단점이 생기죠.
@@ -154,7 +154,7 @@ JDK 9부터 모듈 시스템을 도입해 `jre` 디렉토리가 사라졌다고 
 인터프리터만을 사용해 바이트 코드를 한 줄씩 읽고 실행했으나 이제는 JIT 컴파일러도 횬옹하여 속도의 격차를 줄일 수 있었죠.
 다른 언어들도 발전했을 테고, 여전히 일부 네이티브 언어(특정 플랫폼에 직접 매핑 ex. C, Rust)보다 느리겠지만 단점보다 장점이 더욱 두드러지게 됩니다.
 
-&nbsp; 어쨌든 이 책에서는 JVM으로 인해 "[🔗Write once, run anywhere](/language/standard-of-java-01_1/#1-운영체제os에-독립적)"(=운영 체제에 독립적)가 가능하다는 게 중요하다고 합니다.
+&nbsp; 어쨌든 이 책에서는 JVM으로 인해 "[🔗Write once, run anywhere](/language/java-start-01/#1-운영체제os에-독립적)"(=운영 체제에 독립적)가 가능하다는 게 중요하다고 합니다.
 
 > 💡 JIT(Just-In-Time) 컴파일러
 <br> 
@@ -231,11 +231,11 @@ JIT 컴파일러는 프로그램의 실행 흐름에 따라 필요한 코드 블
 <p> 
   <strong>📑 목차: </strong>
   <span itemprop="keywords">
-    <a href="/목차/standard-of-java" class="page__taxonomy-item p-category">Java의 정석 정리</a>
+    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java의 정석 정리</a>
   </span>
 </p>
 
 <nav class="pagination">
-<a href="/language/standard-of-java-01_1" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(1)</a>
-<a href="/language/standard-of-java-01_3" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 01장(3) 👉</a>
+<a href="/language/java-start-01" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(1)</a>
+<a href="/language/java-start-03" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 01장(3) 👉</a>
 </nav>
