--- a/_posts/java/2024-03-01-java-start-03.md
+++ b/_posts/java/2024-03-01-java-start-03.md
@@ -2,7 +2,7 @@
 layout: single
 title: "[Java] Java 개발 시작하기"
 categories: Language
-tag: [Java의 정석]
+tag: [Java, start]
 ---
 
 <style>
@@ -14,8 +14,6 @@ tag: [Java의 정석]
 </style>
 
 
-Java의 정석 01장 정리(3)
-
 # 개발 시작
 ## 개발 환경 구축(Windows)
 1. JDK Download
@@ -23,7 +21,7 @@ Java의 정석 01장 정리(3)
 
    저의 실행 파일 폴더 경로는 `C:\Program Files\Java\jdk-11\bin` 입니다.<br>
 
-   > [🔗실행 파일](/language/standard-of-java-01_2/#실행-파일)은 JDK의 bin 디렉토리에 존재합니다.<br>
+   > [🔗실행 파일](/language/java-start-02/#실행-파일)은 JDK의 bin 디렉토리에 존재합니다.<br>
    > 터미널이나 커맨드 라인에서 `java`, `javac`를 어느 위치에서나 직접 호출할 수 있도록 "환경 변수"를 설정해야 합니다.
 
    <br>
@@ -157,11 +155,11 @@ main method를 포함한 class를 `java.exe`로 실행하면, JVM이 main method
 <p> 
   <strong>📑 목차: </strong>
   <span itemprop="keywords">
-    <a href="/목차/standard-of-java" class="page__taxonomy-item p-category">Java의 정석 정리</a>
+    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java의 정석 정리</a>
   </span>
 </p>
 
 <nav class="pagination">
-<a href="/language/standard-of-java-01_2" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(2)</a>
+<a href="/language/java-start-02" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(2)</a>
 <a href="#" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 아직 음슴 </a>
 </nav>
