--- a/_posts/java/2024-03-01-java-start-02.md
+++ b/_posts/java/2024-03-01-java-start-02.md
@@ -231,11 +231,11 @@ JIT 컴파일러는 프로그램의 실행 흐름에 따라 필요한 코드 블
 <p> 
   <strong>📑 목차: </strong>
   <span itemprop="keywords">
-    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java의 정석 정리</a>
+    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java 목차</a>
   </span>
 </p>
 
 <nav class="pagination">
-<a href="/language/java-start-01" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(1)</a>
-<a href="/language/java-start-03" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 01장(3) 👉</a>
+<a href="/language/java-start-01" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 Java start(1)</a>
+<a href="/language/java-start-03" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> Java start(3) 👉</a>
 </nav>
