--- a/_posts/java/2024-03-01-java-start-03.md
+++ b/_posts/java/2024-03-01-java-start-03.md
@@ -89,7 +89,7 @@ public class ClassName {
 - 해당 소스 파일의 패키지를 선언합니다.
   - <span style="color: #808080">Class 명을 이름(first name), 패키지를 성(family name)으로 비유해서 이해했습니다.</span>
 - 반드시 소스 파일의 최상단에 위치하며, 소스 파일이 위치한 디렉터리와 일치해야 합니다.
-- 명시하지 않을 시, default package에 포함됩니다. (다른 패키지에서 import 불가)<br>
+- 명시하지 않을 시, default package에 포함됩니다. (eclipse)<br>
 <br>
 
 **<span class="my-highlight">import</span>**
@@ -155,11 +155,11 @@ main method를 포함한 class를 `java.exe`로 실행하면, JVM이 main method
 <p> 
   <strong>📑 목차: </strong>
   <span itemprop="keywords">
-    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java의 정석 정리</a>
+    <a href="/목차/java-list" class="page__taxonomy-item p-category">Java 목차</a>
   </span>
 </p>
 
 <nav class="pagination">
-<a href="/language/java-start-02" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 01장(2)</a>
-<a href="#" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 아직 음슴 </a>
+<a href="/language/java-start-02" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> 👈 Java start(2)</a>
+<a href="/launguage/java-basic-variable" class="pagination&#45;&#45;pager" title="{{ page.previous.title | markdownify | strip_html }}"> Java 변수 👉 </a>
 </nav>
